<resources>
    <string name="app_name">电商项目</string>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="phonenum">手机号</string>
    <string name="code">验证码</string>
    <string name="password">登录密码</string>
    <string name="lijideng">已有账户？立即登录</string>
    <string name="regist">注册</string>
    <string name="rem_pwd">记住密码</string>
    <string name="fast_reg">快速注册</string>
    <string name="login">登录</string>
    <string name="qq">QQ登录</string>
    <string name="fx">分享一波</string>
</resources>
