<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="@null"
        android:drawableLeft="@mipmap/register_icon_phone_n_hdpi"
        android:drawableBottom="@drawable/edit_shape"
        android:drawablePadding="15dp"
        android:hint="@string/phonenum"
        android:maxLines="1"
        android:padding="20dp"
        android:textColorHint="#fff" />

    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableLeft="@mipmap/register_icon_lock_n_hdpi"
        android:drawableRight="@mipmap/login_icon_eye_n_hdhpi"
        android:drawableBottom="@drawable/edit_shape"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:padding="20dp"
        android:textColorHint="#fff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/ck_rem_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/rem_pwd"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/text_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ck_rem_pwd"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:padding="20dp"
            android:text="@string/fast_reg"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape"
        android:text="@string/login"

        android:textColor="#ff5f71"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_qq"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape"
        android:text="@string/qq"
        android:textColor="#ff5f71"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_fx"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape"
        android:text="@string/fx"
        android:textColor="#ff5f71"
        android:textSize="18sp" />
</LinearLayout>